--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
-serde = { version = "1.0.215", features = ["serde_derive"] }
+csv = "1.3.1"
+serde = { version = "1.0.215", features = ["derive"] }
 sysinfo = "0.33.0"
 toml = "0.8.19"
